[package]
name = "tetris"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# https://github.com/johnthagen/min-sized-rust
[profile.release]
opt-level = "z"
debug = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
bevy = "0.12.1"
# bevy-inspector-egui="0.21.0"
rand = "0.8.5"
lazy_static = "1.4"
